--- a/chariotChallenge/Base.lproj/Main.storyboard
+++ b/chariotChallenge/Base.lproj/Main.storyboard
@@ -165,6 +165,7 @@
                     <connections>
                         <outlet property="textFieldEmail" destination="oiq-sE-8eq" id="Lz6-dN-HXk"/>
                         <outlet property="textFieldPassword" destination="fLK-cb-h5F" id="W0V-ui-Pu8"/>
+                        <segue destination="SU8-1g-QRS" kind="show" identifier="segue" id="0M3-n5-ZTb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -183,10 +184,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg4" translatesAutoresizingMaskIntoConstraints="NO" id="UdG-CE-gw1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg4" translatesAutoresizingMaskIntoConstraints="NO" id="UdG-CE-gw1">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6aM-Of-lyW">
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6aM-Of-lyW">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lmA-AK-AS5">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
