--- a/chariotChallenge/Base.lproj/Main.storyboard
+++ b/chariotChallenge/Base.lproj/Main.storyboard
@@ -175,7 +175,7 @@
         <!--Profile-->
         <scene sceneID="u3i-r3-sny">
             <objects>
-                <viewController id="SU8-1g-QRS" sceneMemberID="viewController">
+                <viewController id="SU8-1g-QRS" customClass="UserProfileViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Hve-ZQ-nVd"/>
                         <viewControllerLayoutGuide type="bottom" id="ib9-OF-EEf"/>
@@ -184,10 +184,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg4" translatesAutoresizingMaskIntoConstraints="NO" id="UdG-CE-gw1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg4" translatesAutoresizingMaskIntoConstraints="NO" id="UdG-CE-gw1">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6aM-Of-lyW">
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6aM-Of-lyW">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lmA-AK-AS5">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
@@ -211,15 +211,6 @@
                                             </constraints>
                                             <attributedString key="attributedText"/>
                                             <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
-                                        </textField>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="  First" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hVL-eF-lmx">
-                                            <rect key="frame" x="8" y="176" width="288" height="40"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="40" id="ufV-dQ-kem"/>
-                                            </constraints>
-                                            <attributedString key="attributedText"/>
-                                            <textInputTraits key="textInputTraits"/>
                                         </textField>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="   Last" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mCz-I3-EYd">
                                             <rect key="frame" x="304" y="176" width="288" height="40"/>
@@ -303,6 +294,15 @@
                                                     <exclude reference="H7a-QG-myV"/>
                                                 </mask>
                                             </variation>
+                                        </textField>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="  First" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hVL-eF-lmx">
+                                            <rect key="frame" x="8" y="176" width="288" height="40"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="ufV-dQ-kem"/>
+                                            </constraints>
+                                            <attributedString key="attributedText"/>
+                                            <textInputTraits key="textInputTraits"/>
                                         </textField>
                                     </subviews>
                                     <constraints>
@@ -455,6 +455,15 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="a21-sA-fhe"/>
+                    <connections>
+                        <outlet property="buttonUpdate" destination="v2m-Rr-th8" id="iJQ-pD-VYt"/>
+                        <outlet property="textFieldCurrentPassword" destination="TPG-dW-0bO" id="8R7-yi-CKd"/>
+                        <outlet property="textFieldEmail" destination="OAy-c9-KH3" id="N77-xc-hhx"/>
+                        <outlet property="textFieldFirst" destination="hVL-eF-lmx" id="9ah-Tv-scI"/>
+                        <outlet property="textFieldLast" destination="mCz-I3-EYd" id="BQY-T6-g3l"/>
+                        <outlet property="textFieldNewPassword" destination="egA-Ux-H1z" id="pNB-MP-gPY"/>
+                        <outlet property="textFieldPhone" destination="9Md-da-3Vr" id="p1v-su-7Kf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LIg-DP-7Kp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
